--- a/cvApp/cvApp/Views/Home/Index.cshtml
+++ b/cvApp/cvApp/Views/Home/Index.cshtml
@@ -4,13 +4,13 @@
 
 <div class="jumbotron">
     <h1>Vizuális szakember</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
+    <p class="lead">Ha professzionális eredményt szeretnél, bízd egy profira a munkát!</p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Grafikai tervezés</h2>
+        <h2>Grafikai munkák</h2>
         <p>
             ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
             enables a clean separation of concerns and gives you full control over markup
